change to blue + mint style

--- a/outro.html
+++ b/outro.html
@@ -25,7 +25,7 @@
         <li><a href="/contato.html">contato</a></li>
         <li><a href="/outro.html">outro</a></li>
         <li>
-          <a href="https://www.instagram.com/portfoliodaerika/" target="_blank">📷insta</a>
+          <a href="https://www.instagram.com/portfoliodaerika/" target="_blank">social media</a>
         </li>
       </ul>
     </section>
