--- a/produtos.html
+++ b/produtos.html
@@ -25,7 +25,7 @@
         <li><a href="/contato.html">contato</a></li>
         <li><a href="/outro.html">outro</a></li>
         <li>
-            <a href="https://www.instagram.com/portfoliodaerika/" target="_blank">📷insta</a>
+            <a href="https://www.instagram.com/portfoliodaerika/" target="_blank">social media</a>
         </li>
     </ul>
 </section>
@@ -40,7 +40,7 @@
             </p>
         </h5>
     </article>
-
+    <hr/>
     <article>
         <h4>tricôs</h4>
         <h5>
@@ -49,7 +49,6 @@
             </p>
         </h5>
     </article>
-    <hr/>
 </main>
 
 <footer>
