add pictures of the products

--- a/404.html
+++ b/404.html
@@ -11,14 +11,14 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Source%20Sans%20Pro:400,700"
     />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="static/main.css" />
   </head>
   <body>
     <main>
       <h1>ops!</h1>
       <h3>404 Not Found</h3>
       <h4>página não encontrada</h4>
-      <h5><a href="/index.html">clique aqui para voltar para a home</a></h5>
+      <p><a href="/index.html">clique aqui para voltar para a home</a></p>
     </main>
   </body>
 </html>
