--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Source%20Sans%20Pro:400,700"
     />
-    <link rel="stylesheet" href="main.css"/>
+    <link rel="stylesheet" href="static/main.css"/>
     <script src="functions.js" type="text/javascript"></script>
 </head>
 <body onscroll="myFunction()">
@@ -59,7 +59,7 @@
 </main>
 
 <footer>
-    <p>Essa página sofreu <span id="demo">0</span> rolagens</p>
+    <p>Essa página sofreu <span id="counter">0</span> rolagens</p>
     <p>Feito com ❤ por <a href="https://erikacarvalho.github.io" target="_blank">Erika</a></p>
     <br>
 </footer>
