--- a/outro.html
+++ b/outro.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Source%20Sans%20Pro:400,700"
     />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="static/main.css" />
   </head>
   <body>
     <header>
@@ -33,9 +33,7 @@
     <main>
       <h3>outro</h3>
       <h4>o que colocar aqui?</h4>
-      <h5>
         <p>inserir algum texto aqui</p>
-      </h5>
       <hr />
     </main>
 
