--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,7 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Source%20Sans%20Pro:400,700"
     />
-    <link rel="stylesheet" href="main.css"/>
+    <link rel="stylesheet" href="static/main.css"/>
 </head>
 <body>
 <header>
@@ -32,14 +32,13 @@
 
 <main>
     <h3>contato</h3>
-    <h5>
-        <p>aqui entra a forma de contato</p>
-    </h5>
+    <h4>formulário de contato</h4>
+    <p>aqui entra a forma de contato</p>
     <hr/>
 </main>
 
 <footer>
-    <h6>Feito com ❤ por <a href="https://erikacarvalho.github.io" target="_blank">Erika</a></h6>
+    <p>Feito com ❤ por <a href="https://erikacarvalho.github.io" target="_blank">Erika</a></p>
 </footer>
 </body>
 </html>
