add content to tutoriais

--- a/index.html
+++ b/index.html
@@ -1,67 +1,82 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8"/>
+<html lang="pt-br" dir="ltr">
+  <head>
+    <meta charset="UTF-8" />
     <title>crafts da erika - home</title>
     <link
-            href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-            rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
     />
     <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Source%20Sans%20Pro:400,700"
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Source%20Sans%20Pro:400,700"
     />
-    <link rel="stylesheet" href="static/main.css"/>
+    <link rel="stylesheet" href="static/main.css" />
     <script src="functions.js" type="text/javascript"></script>
-</head>
-<body onscroll="myFunction()">
-<header>
-    <h1>crafts.</h1>
-</header>
-<nav class="infobar">
-    <ul>
+  </head>
+  <body onscroll="myFunction()">
+    <header>
+      <h1>crafts.</h1>
+    </header>
+    <nav class="infobar">
+      <ul>
         <li><a href="/index.html">home</a></li>
         <li><a href="/produtos.html">produtos</a></li>
         <li><a href="/contato.html">contato</a></li>
-        <li><a href="/outro.html">outro</a></li>
+        <li><a href="/tutoriais.html">tutoriais</a></li>
         <li>
-            <a href="https://www.instagram.com/portfoliodaerika/" target="_blank">@instagram</a>
+          <a href="https://www.instagram.com/portfoliodaerika/" target="_blank"
+            >@instagram</a
+          >
         </li>
-    </ul>
-</nav>
-<main>
-    <article>
+      </ul>
+    </nav>
+    <main>
+      <article>
         <h3>sobre</h3>
         <h4>crafts da erika</h4>
         <h5>
-            <p>Lorem ipsum <a>dolor sit amet</a>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Vulputate mi sit amet mauris commodo quis imperdiet massa. Faucibus turpis in eu mi
-                bibendum neque egestas congue. In hendrerit gravida rutrum quisque non tellus orci ac. Vel eros donec ac
-                odio tempor orci dapibus. Sodales ut eu sem integer. Tristique risus nec feugiat in fermentum posuere
-                urna. Vitae et leo duis ut diam quam nulla porttitor massa. Nunc sed id semper risus. Orci a scelerisque
-                purus semper. Morbi quis commodo odio aenean sed.</p>
+          <p>
+            Lorem ipsum <a>dolor sit amet</a>, consectetur adipiscing elit, sed
+            do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Vulputate mi sit amet mauris commodo quis imperdiet massa. Faucibus
+            turpis in eu mi bibendum neque egestas congue. In hendrerit gravida
+            rutrum quisque non tellus orci ac. Vel eros donec ac odio tempor
+            orci dapibus. Sodales ut eu sem integer. Tristique risus nec feugiat
+            in fermentum posuere urna. Vitae et leo duis ut diam quam nulla
+            porttitor massa. Nunc sed id semper risus. Orci a scelerisque purus
+            semper. Morbi quis commodo odio aenean sed.
+          </p>
 
-
-            <p>Turpis massa sed elementum tempus egestas. Mi proin sed libero enim sed faucibus turpis in. Auctor augue
-                mauris augue neque gravida in. Gravida arcu ac tortor dignissim convallis aenean et tortor at. Dolor
-                purus non enim praesent elementum. Posuere lorem ipsum dolor sit amet. Accumsan sit amet nulla facilisi.
-                Nulla posuere sollicitudin aliquam ultrices sagittis orci. Odio ut sem nulla pharetra diam. Massa eget
-                egestas purus viverra accumsan. Morbi tristique senectus et netus et malesuada fames. Sed euismod nisi
-                porta lorem. Massa enim nec dui nunc mattis enim ut tellus elementum. Integer vitae justo eget magna
-                fermentum iaculis. Facilisis leo vel fringilla est ullamcorper eget nulla facilisi. Arcu felis bibendum
-                ut tristique et egestas quis. Hendrerit gravida rutrum quisque non tellus orci ac auctor. Vitae tortor
-                condimentum lacinia quis vel eros. Semper auctor neque vitae tempus quam pellentesque nec. Aliquet
-                porttitor lacus luctus accumsan tortor.
-            </p>
+          <p>
+            Turpis massa sed elementum tempus egestas. Mi proin sed libero enim
+            sed faucibus turpis in. Auctor augue mauris augue neque gravida in.
+            Gravida arcu ac tortor dignissim convallis aenean et tortor at.
+            Dolor purus non enim praesent elementum. Posuere lorem ipsum dolor
+            sit amet. Accumsan sit amet nulla facilisi. Nulla posuere
+            sollicitudin aliquam ultrices sagittis orci. Odio ut sem nulla
+            pharetra diam. Massa eget egestas purus viverra accumsan. Morbi
+            tristique senectus et netus et malesuada fames. Sed euismod nisi
+            porta lorem. Massa enim nec dui nunc mattis enim ut tellus
+            elementum. Integer vitae justo eget magna fermentum iaculis.
+            Facilisis leo vel fringilla est ullamcorper eget nulla facilisi.
+            Arcu felis bibendum ut tristique et egestas quis. Hendrerit gravida
+            rutrum quisque non tellus orci ac auctor. Vitae tortor condimentum
+            lacinia quis vel eros. Semper auctor neque vitae tempus quam
+            pellentesque nec. Aliquet porttitor lacus luctus accumsan tortor.
+          </p>
         </h5>
-        <hr/>
-    </article>
-</main>
+        <hr />
+      </article>
+    </main>
 
-<footer>
-    <p>Essa página sofreu <span id="counter">0</span> rolagens</p>
-    <p>Feito com ❤ por <a href="https://erikacarvalho.github.io" target="_blank">Erika</a></p>
-    <br>
-</footer>
-</body>
+    <footer>
+      <p>Essa página sofreu <span id="counter">0</span> rolagens</p>
+      <p>
+        Feito com ❤ por
+        <a href="https://erikacarvalho.github.io" target="_blank">Erika</a>
+      </p>
+      <br />
+    </footer>
+  </body>
 </html>
