--- a/produtos.html
+++ b/produtos.html
@@ -1,118 +1,154 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8"/>
+<html lang="pt-br" dir="ltr">
+  <head>
+    <meta charset="UTF-8" />
     <title>crafts da erika - produtos</title>
     <link
-            href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-            rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
     />
     <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Source%20Sans%20Pro:400,700"
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Source%20Sans%20Pro:400,700"
     />
-    <link rel="stylesheet" href="static/main.css"/>
-</head>
-<body>
-<header>
-    <h1>crafts.</h1>
-</header>
+    <link rel="stylesheet" href="static/main.css" />
+  </head>
+  <body>
+    <header>
+      <h1>crafts.</h1>
+    </header>
 
-<section id="sidebar" class="infobar">
-    <ul>
+    <nav class="infobar">
+      <ul>
         <li><a href="/index.html">home</a></li>
         <li><a href="/produtos.html">produtos</a></li>
         <li><a href="/contato.html">contato</a></li>
-        <li><a href="/outro.html">outro</a></li>
+        <li><a href="/tutoriais.html">tutoriais</a></li>
         <li>
-            <a href="https://www.instagram.com/portfoliodaerika/" target="_blank">social media</a>
+          <a href="https://www.instagram.com/portfoliodaerika/" target="_blank"
+            >@instagram</a
+          >
         </li>
-    </ul>
-</section>
+      </ul>
+    </nav>
 
-<main>
-    <h3>produtos</h3>
-    <section>
+    <main>
+      <h3>produtos</h3>
+      <section>
         <h4>crochês</h4>
         <figure>
-            <img src="static/img/croche-04.png"
-                 alt="foto de cachepô de fio de malha estampado, nas cores rosa e cinza">
-            <figcaption>cachepô de fio de malha estampado</figcaption>
+          <img
+            src="static/img/croche-04.png"
+            alt="foto de cachepô de fio de malha estampado, nas cores rosa e cinza"
+          />
+          <figcaption>cachepô de fio de malha estampado</figcaption>
         </figure>
 
         <figure>
-            <img src="static/img/croche-05.png" alt="foto de dois porta-trecos de fio de malha preto">
-            <figcaption>porta-trecos de fio de malha</figcaption>
+          <img
+            src="static/img/croche-05.png"
+            alt="foto de dois porta-trecos de fio de malha preto"
+          />
+          <figcaption>porta-trecos de fio de malha</figcaption>
         </figure>
 
         <figure>
-            <img src="static/img/croche-11.jpg"
-                 alt="foto de pufe cinza feito em crochê com barbante grosso com gata laranja em cima">
-            <figcaption>pufe de barbante</figcaption>
+          <img
+            src="static/img/croche-11.jpg"
+            alt="foto de pufe cinza feito em crochê com barbante grosso com gata laranja em cima"
+          />
+          <figcaption>pufe de barbante</figcaption>
         </figure>
 
         <figure>
-            <img src="static/img/croche-03.png"
-                 alt="foto de árvore de natal pequena feita em crochê (método amigurumi) com estrela no topo ao lado de gatinha branca com cinza">
-            <figcaption>árvore de natal em amigurumi</figcaption>
+          <img
+            src="static/img/croche-03.png"
+            alt="foto de árvore de natal pequena feita em crochê (método amigurumi) com estrela no topo ao lado de gatinha branca com cinza"
+          />
+          <figcaption>árvore de natal em amigurumi</figcaption>
         </figure>
 
         <figure>
-            <img src="static/img/croche-02.png"
-                 alt="foto de cama de pet de fio de malha estampado branco com fio de malha liso rosa">
-            <figcaption>cama de pet de fio de malha</figcaption>
+          <img
+            src="static/img/croche-02.png"
+            alt="foto de cama de pet de fio de malha estampado branco com fio de malha liso rosa"
+          />
+          <figcaption>cama de pet de fio de malha</figcaption>
         </figure>
 
         <figure>
-            <img src="static/img/croche-09.png" alt="foto de manta de fio de malha com gato malhado em cima">
-            <figcaption>manta de fio de malha</figcaption>
+          <img
+            src="static/img/croche-09.png"
+            alt="foto de manta de fio de malha com gato malhado em cima"
+          />
+          <figcaption>manta de fio de malha</figcaption>
         </figure>
 
         <figure>
-            <img src="static/img/croche-06.png" alt="foto de cachepô de fio de malha azul escuro">
-            <figcaption>cachepô de fio de malha liso</figcaption>
+          <img
+            src="static/img/croche-06.png"
+            alt="foto de cachepô de fio de malha azul escuro"
+          />
+          <figcaption>cachepô de fio de malha liso</figcaption>
         </figure>
 
         <figure>
-            <img src="static/img/croche-07.png"
-                 alt="foto de tapete de fio de malha nas cores rosa cereja, azul claro e bege">
-            <figcaption>tapete de fio de malha com várias cores</figcaption>
+          <img
+            src="static/img/croche-07.png"
+            alt="foto de tapete de fio de malha nas cores rosa cereja, azul claro e bege"
+          />
+          <figcaption>tapete de fio de malha com várias cores</figcaption>
         </figure>
 
         <figure>
-            <img src="static/img/croche-01.png" alt="foto de xale em degradê do vinho para o branco">
-            <figcaption>xale em degradê</figcaption>
+          <img
+            src="static/img/croche-01.png"
+            alt="foto de xale em degradê do vinho para o branco"
+          />
+          <figcaption>xale em degradê</figcaption>
         </figure>
 
         <figure>
-            <img src="static/img/croche-10.png" alt="foto de touca de lã bege com orelhas de gatinho">
-            <figcaption>touca de lã com orelhas de gatinho</figcaption>
+          <img
+            src="static/img/croche-10.png"
+            alt="foto de touca de lã bege com orelhas de gatinho"
+          />
+          <figcaption>touca de lã com orelhas de gatinho</figcaption>
         </figure>
 
         <figure>
-            <img src="static/img/croche-08.png"
-                 alt="foto de porta-copos em fio de malha em degradê nos tons de bege a rosa escuro">
-            <figcaption>porta-copos em fio de malha com degradê</figcaption>
+          <img
+            src="static/img/croche-08.png"
+            alt="foto de porta-copos em fio de malha em degradê nos tons de bege a rosa escuro"
+          />
+          <figcaption>porta-copos em fio de malha com degradê</figcaption>
         </figure>
-    </section>
-    <hr/>
-    <section>
+      </section>
+      <hr />
+      <section>
         <h4>tricôs</h4>
         <figure>
-            <img src="static/img/trico-02.jpg" alt="foto de blusa de lã cinza com gola verde claro">
-            <figcaption>blusa de manga longa em lã</figcaption>
+          <img
+            src="static/img/trico-02.jpg"
+            alt="foto de blusa de lã cinza com gola verde claro"
+          />
+          <figcaption>blusa de manga longa em lã</figcaption>
         </figure>
 
         <figure>
-            <img src="static/img/trico-01.jpg" alt="foto de manta de lã bege">
-            <figcaption>manta de lã bege</figcaption>
+          <img src="static/img/trico-01.jpg" alt="foto de manta de lã bege" />
+          <figcaption>manta de lã bege</figcaption>
         </figure>
-        <hr/>
-    </section>
-</main>
+        <hr />
+      </section>
+    </main>
 
-<footer>
-    <p>Feito com ❤ por <a href="https://erikacarvalho.github.io" target="_blank">Erika</a>. Gatinhos não inclusos.</p>
-</footer>
-</body>
+    <footer>
+      <p>
+        Feito com ❤ por
+        <a href="https://erikacarvalho.github.io" target="_blank">Erika</a>.
+        Gatinhos não inclusos.
+      </p>
+    </footer>
+  </body>
 </html>
