--- a/contato.html
+++ b/contato.html
@@ -1,44 +1,49 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8"/>
+<html lang="pt-br" dir="ltr">
+  <head>
+    <meta charset="UTF-8" />
     <title>crafts da erika - contato</title>
     <link
-            href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-            rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
     />
     <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Source%20Sans%20Pro:400,700"
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Source%20Sans%20Pro:400,700"
     />
-    <link rel="stylesheet" href="static/main.css"/>
-</head>
-<body>
-<header>
-    <h1>crafts.</h1>
-</header>
+    <link rel="stylesheet" href="static/main.css" />
+  </head>
+  <body>
+    <header>
+      <h1>crafts.</h1>
+    </header>
 
-<section id="sidebar" class="infobar">
-    <ul>
+    <nav class="infobar">
+      <ul>
         <li><a href="/index.html">home</a></li>
         <li><a href="/produtos.html">produtos</a></li>
         <li><a href="/contato.html">contato</a></li>
-        <li><a href="/outro.html">outro</a></li>
+        <li><a href="/tutoriais.html">tutoriais</a></li>
         <li>
-            <a href="https://www.instagram.com/portfoliodaerika/" target="_blank">social media</a>
+          <a href="https://www.instagram.com/portfoliodaerika/" target="_blank"
+            >@instagram</a
+          >
         </li>
-    </ul>
-</section>
+      </ul>
+    </nav>
 
-<main>
-    <h3>contato</h3>
-    <h4>formulário de contato</h4>
-    <p>aqui entra a forma de contato</p>
-    <hr/>
-</main>
+    <main>
+      <h3>contato</h3>
+      <h4>formulário de contato</h4>
+      <p>aqui entra a forma de contato</p>
+      <hr />
+    </main>
 
-<footer>
-    <p>Feito com ❤ por <a href="https://erikacarvalho.github.io" target="_blank">Erika</a></p>
-</footer>
-</body>
+    <footer>
+      <p>
+        Feito com ❤ por
+        <a href="https://erikacarvalho.github.io" target="_blank">Erika</a>
+      </p>
+    </footer>
+  </body>
 </html>
