add lightbox and gallery view to 'produtos' section

--- a/produtos.html
+++ b/produtos.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8" />
     <title>crafts da erika - produtos</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Source%20Sans%20Pro:400,700"
     />
     <link rel="stylesheet" href="static/main.css" />
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
   </head>
   <body>
     <header>
@@ -37,107 +41,185 @@
       <section>
         <h4>crochês</h4>
         <figure>
-          <img
-            src="static/img/croche-04.png"
-            alt="foto de cachepô de fio de malha estampado, nas cores rosa e cinza"
-          />
-          <figcaption>cachepô de fio de malha estampado</figcaption>
+          <a
+            data-fancybox="gallery"
+            href="static/img/croche-04.png"
+            data-caption="cachepô de fio de malha estampado"
+          >
+            <img
+              src="static/img/croche-04.png"
+              alt="foto de cachepô de fio de malha estampado, nas cores rosa e cinza"
+            />
+            <figcaption>cachepô de fio de malha estampado</figcaption>
+          </a>
         </figure>
 
         <figure>
-          <img
-            src="static/img/croche-05.png"
-            alt="foto de dois porta-trecos de fio de malha preto"
-          />
-          <figcaption>porta-trecos de fio de malha</figcaption>
+          <a
+            data-fancybox="gallery"
+            href="static/img/croche-05.png"
+            data-caption="porta-trecos de fio de malha"
+          >
+            <img
+              src="static/img/croche-05.png"
+              alt="foto de dois porta-trecos de fio de malha preto"
+            />
+            <figcaption>porta-trecos de fio de malha</figcaption>
+          </a>
         </figure>
 
         <figure>
-          <img
-            src="static/img/croche-11.jpg"
-            alt="foto de pufe cinza feito em crochê com barbante grosso com gata laranja em cima"
-          />
-          <figcaption>pufe de barbante</figcaption>
+          <a
+            data-fancybox="gallery"
+            href="static/img/croche-11.jpg"
+            data-caption="pufe de barbante grosso"
+          >
+            <img
+              src="static/img/croche-11.jpg"
+              alt="foto de pufe cinza feito em crochê com barbante grosso com gata laranja em cima"
+            />
+            <figcaption>pufe de barbante grosso</figcaption>
+          </a>
         </figure>
 
         <figure>
-          <img
-            src="static/img/croche-03.png"
-            alt="foto de árvore de natal pequena feita em crochê (método amigurumi) com estrela no topo ao lado de gatinha branca com cinza"
-          />
-          <figcaption>árvore de natal em amigurumi</figcaption>
+          <a
+            data-fancybox="gallery"
+            href="static/img/croche-03.png"
+            data-caption="árvore de natal em amigurumi"
+          >
+            <img
+              src="static/img/croche-03.png"
+              alt="foto de árvore de natal pequena feita em crochê (método amigurumi) com estrela no topo ao lado de gatinha branca com cinza"
+            />
+            <figcaption>árvore de natal em amigurumi</figcaption>
+          </a>
         </figure>
 
         <figure>
-          <img
-            src="static/img/croche-02.png"
-            alt="foto de cama de pet de fio de malha estampado branco com fio de malha liso rosa"
-          />
-          <figcaption>cama de pet de fio de malha</figcaption>
+          <a
+            data-fancybox="gallery"
+            href="static/img/croche-02.png"
+            data-caption="cama de pet de fio de malha"
+          >
+            <img
+              src="static/img/croche-02.png"
+              alt="foto de cama de pet de fio de malha estampado branco com fio de malha liso rosa"
+            />
+            <figcaption>cama de pet de fio de malha</figcaption>
+          </a>
         </figure>
 
         <figure>
-          <img
-            src="static/img/croche-09.png"
-            alt="foto de manta de fio de malha com gato malhado em cima"
-          />
-          <figcaption>manta de fio de malha</figcaption>
+          <a
+            data-fancybox="gallery"
+            href="static/img/croche-09.png"
+            data-caption="manta de fio de malha"
+          >
+            <img
+              src="static/img/croche-09.png"
+              alt="foto de manta de fio de malha com gato malhado em cima"
+            />
+            <figcaption>manta de fio de malha</figcaption>
+          </a>
         </figure>
 
         <figure>
-          <img
-            src="static/img/croche-06.png"
-            alt="foto de cachepô de fio de malha azul escuro"
-          />
-          <figcaption>cachepô de fio de malha liso</figcaption>
+          <a
+            data-fancybox="gallery"
+            href="static/img/croche-06.png"
+            data-caption="cachepô de fio de malha liso"
+          >
+            <img
+              src="static/img/croche-06.png"
+              alt="foto de cachepô de fio de malha azul escuro"
+            />
+            <figcaption>cachepô de fio de malha liso</figcaption>
+          </a>
         </figure>
 
         <figure>
-          <img
-            src="static/img/croche-07.png"
-            alt="foto de tapete de fio de malha nas cores rosa cereja, azul claro e bege"
-          />
-          <figcaption>tapete de fio de malha com várias cores</figcaption>
+          <a
+            data-fancybox="gallery"
+            href="static/img/croche-07.png"
+            data-caption="tapete de fio de malha com várias cores"
+          >
+            <img
+              src="static/img/croche-07.png"
+              alt="foto de tapete de fio de malha nas cores rosa cereja, azul claro e bege"
+            />
+            <figcaption>tapete de fio de malha com várias cores</figcaption>
+          </a>
         </figure>
 
         <figure>
-          <img
-            src="static/img/croche-01.png"
-            alt="foto de xale em degradê do vinho para o branco"
-          />
-          <figcaption>xale em degradê</figcaption>
+          <a
+            data-fancybox="gallery"
+            href="static/img/croche-01.png"
+            data-caption="xale em degradê"
+          >
+            <img
+              src="static/img/croche-01.png"
+              alt="foto de xale em degradê do vinho para o branco"
+            />
+            <figcaption>xale em degradê</figcaption>
+          </a>
         </figure>
 
         <figure>
-          <img
-            src="static/img/croche-10.png"
-            alt="foto de touca de lã bege com orelhas de gatinho"
-          />
-          <figcaption>touca de lã com orelhas de gatinho</figcaption>
+          <a
+            data-fancybox="gallery"
+            href="static/img/croche-10.png"
+            data-caption="touca de lã com orelhas de gatinho"
+          >
+            <img
+              src="static/img/croche-10.png"
+              alt="foto de touca de lã bege com orelhas de gatinho"
+            />
+            <figcaption>touca de lã com orelhas de gatinho</figcaption>
+          </a>
         </figure>
 
         <figure>
-          <img
-            src="static/img/croche-08.png"
-            alt="foto de porta-copos em fio de malha em degradê nos tons de bege a rosa escuro"
-          />
-          <figcaption>porta-copos em fio de malha com degradê</figcaption>
+          <a
+            data-fancybox="gallery"
+            href="static/img/croche-08.png"
+            data-caption="porta-copos em fio de malha com degradê"
+          >
+            <img
+              src="static/img/croche-08.png"
+              alt="foto de porta-copos em fio de malha em degradê nos tons de bege a rosa escuro"
+            />
+            <figcaption>porta-copos em fio de malha com degradê</figcaption>
+          </a>
         </figure>
       </section>
       <hr />
       <section>
         <h4>tricôs</h4>
         <figure>
-          <img
-            src="static/img/trico-02.jpg"
-            alt="foto de blusa de lã cinza com gola verde claro"
-          />
-          <figcaption>blusa de manga longa em lã</figcaption>
+          <a
+            data-fancybox="gallery"
+            href="static/img/trico-02.jpg"
+            data-caption="blusa de lã de manga longa"
+          >
+            <img
+              src="static/img/trico-02.jpg"
+              alt="foto de blusa de lã cinza com gola verde claro"
+            />
+            <figcaption>blusa de lã de manga longa</figcaption>
+          </a>
         </figure>
 
         <figure>
-          <img src="static/img/trico-01.jpg" alt="foto de manta de lã bege" />
-          <figcaption>manta de lã bege</figcaption>
+          <a
+            data-fancybox="gallery"
+            href="static/img/trico-01.jpg"
+            data-caption="manta de lã bege"
+          >
+            <img src="static/img/trico-01.jpg" alt="foto de manta de lã bege" />
+            <figcaption>manta de lã bege</figcaption>
+          </a>
         </figure>
         <hr />
       </section>
