add content do 'contato' section

--- a/contato.html
+++ b/contato.html
@@ -1,45 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8"/>
     <title>crafts da erika - contato</title>
     <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Source%20Sans%20Pro:400,700"
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Source%20Sans%20Pro:400,700"
     />
-    <link rel="stylesheet" href="static/main.css" />
-  </head>
-  <body>
-    <header>
-      <h1>crafts.</h1>
-    </header>
+    <link rel="stylesheet" href="static/main.css"/>
+</head>
+<body>
+<header>
+    <h1>crafts.</h1>
+</header>
 
-    <nav class="infobar">
-      <ul>
+<nav class="infobar">
+    <ul>
         <li><a href="/index.html">home</a></li>
         <li><a href="/produtos.html">produtos</a></li>
-        <li><a href="/contato.html">contato</a></li>
         <li><a href="/tutoriais.html">tutoriais</a></li>
+        <li><a href="/contato.html">contato</a></li>
         <li>
-          <a href="https://www.instagram.com/portfoliodaerika/" target="_blank"
-            >@instagram</a
-          >
+            <a href="https://www.instagram.com/portfoliodaerika/" target="_blank"
+            >@insta</a
+            >
         </li>
-      </ul>
-    </nav>
+    </ul>
+</nav>
 
-    <main>
-      <h3>contato</h3>
-      <h4>formulário de contato</h4>
-      <p>aqui entra a forma de contato</p>
-      <hr />
-    </main>
+<main>
+    <h3>contato</h3>
+    <h4>formas de contato</h4>
+    <p>quer fazer uma encomenda? trocar uma ideia?</p>
+    <p>entre em contato pelo meio que preferir, abaixo algumas opções:</p>
 
-    <footer>
-      <p>
+    <h5>instagram</h5>
+    <p>envie uma mensagem via DM do instagram: <a href="https://www.instagram.com/portfoliodaerika/" target="_blank">
+            @portfoliodaerika
+        </a>
+    </p>
+
+    <h5>e-mail</h5>
+    <p>envie um e-mail para: <a href="mailto:craftsdaerika [at] gmail.com" target="_blank">
+            craftsdaerika&#64;gmail.com
+        </a>
+    </p>
+
+    <h5>linkedin</h5>
+    <p>envie uma mensagem via linkedin: <a href="https://bit.ly/erikain" target="_blank">erika carvalho</a>
+    </p>
+    <hr/>
+</main>
+
+<footer>
+    <p>
         Feito com ❤ por
         <a href="https://erikacarvalho.github.io" target="_blank">Erika</a>
-      </p>
-    </footer>
-  </body>
+    </p>
+</footer>
+</body>
 </html>
