--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <ul>
         <li><a href="/index.html">home</a></li>
         <li><a href="/produtos.html">produtos</a></li>
-        <li><a href="/contato.html">contato</a></li>
         <li><a href="/tutoriais.html">tutoriais</a></li>
+        <li><a href="/contato.html">contato</a></li>
         <li>
           <a href="https://www.instagram.com/portfoliodaerika/" target="_blank"
-            >@instagram</a
+            >@insta</a
           >
         </li>
       </ul>
