add content to home (about)

--- a/index.html
+++ b/index.html
@@ -31,37 +31,30 @@
       <article>
         <h3>sobre</h3>
         <h4>crafts da erika</h4>
-        <h5>
-          <p>
-            Lorem ipsum <a>dolor sit amet</a>, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Vulputate mi sit amet mauris commodo quis imperdiet massa. Faucibus
-            turpis in eu mi bibendum neque egestas congue. In hendrerit gravida
-            rutrum quisque non tellus orci ac. Vel eros donec ac odio tempor
-            orci dapibus. Sodales ut eu sem integer. Tristique risus nec feugiat
-            in fermentum posuere urna. Vitae et leo duis ut diam quam nulla
-            porttitor massa. Nunc sed id semper risus. Orci a scelerisque purus
-            semper. Morbi quis commodo odio aenean sed.
-          </p>
+        <h5>o que são crafts?</h5>
+        <p>
+          <em>crafts</em> é a palavra em inglês para trabalhos manuais. esses
+          podem variar desde cerâmica, biscuit, decoupage, até técnicas que usam
+          fios como bordado, macramê, crochê e tricô. eu sou particularmente
+          interessada nessas três últimas :)
+        </p>
 
-          <p>
-            Turpis massa sed elementum tempus egestas. Mi proin sed libero enim
-            sed faucibus turpis in. Auctor augue mauris augue neque gravida in.
-            Gravida arcu ac tortor dignissim convallis aenean et tortor at.
-            Dolor purus non enim praesent elementum. Posuere lorem ipsum dolor
-            sit amet. Accumsan sit amet nulla facilisi. Nulla posuere
-            sollicitudin aliquam ultrices sagittis orci. Odio ut sem nulla
-            pharetra diam. Massa eget egestas purus viverra accumsan. Morbi
-            tristique senectus et netus et malesuada fames. Sed euismod nisi
-            porta lorem. Massa enim nec dui nunc mattis enim ut tellus
-            elementum. Integer vitae justo eget magna fermentum iaculis.
-            Facilisis leo vel fringilla est ullamcorper eget nulla facilisi.
-            Arcu felis bibendum ut tristique et egestas quis. Hendrerit gravida
-            rutrum quisque non tellus orci ac auctor. Vitae tortor condimentum
-            lacinia quis vel eros. Semper auctor neque vitae tempus quam
-            pellentesque nec. Aliquet porttitor lacus luctus accumsan tortor.
-          </p>
-        </h5>
+        <h5>'crafts da erika'</h5>
+        <p>
+          essa é a marca que uso para divulgar meus trabalhos em crochê e tricô.
+          o catálogo de peças pode ser encontrado em
+          <a href="produtos.html">produtos</a> e, se você quiser fazer uma
+          encomenda, lá na parte <a href="contato.html">contato</a> tem algumas
+          formas de entrar em contato.
+        </p>
+
+        <h5>encomendas</h5>
+        <p>
+          aceito encomendas para entrega em curitiba - pr.
+          <br />quer uma peça que não está na seção
+          <a href="produtos.html">produtos</a>? manda mensagem mesmo assim,
+          vamos conversar!
+        </p>
         <hr />
       </article>
     </main>
