add meta tags description, keywords and author

--- a/produtos.html
+++ b/produtos.html
@@ -2,6 +2,9 @@
 <html lang="pt-br" dir="ltr">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="crafts da erika" />
+    <meta name="keywords" content="crafts, artesanato, crochê, tricô" />
+    <meta name="author" content="Erika Carvalho" />
     <title>crafts da erika - produtos</title>
     <link
       rel="stylesheet"
